--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,14 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <link href="https://fonts.googleapis.com/css2?family=Reenie+Beanie&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+
+    <script
+            src="https://kit.fontawesome.com/9d18197c84.js"
+            crossorigin="anonymous"
+    ></script>
+    <title>JuSt a cHesS gAme!</title>
   </head>
   <body>
     <div id="root"></div>
